--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,6 @@ test:
 production:
   <<: *default
   database: owners_production
-  username: owners
+  username: root
   password: <%= ENV['OWNERS_DATABASE_PASSWORD'] %>
+   socket: /var/lib/mysql/mysql.sock
