--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,6 @@ test:
 production:
   <<: *default
   database: owners_production
-  username: root
+  username: owners
   password: <%= ENV['OWNERS_DATABASE_PASSWORD'] %>
-   socket: /var/lib/mysql/mysql.sock
+  socket: /var/lib/mysql/mysql.sock
