--- a/config/database.yml
+++ b/config/database.yml
@@ -15,11 +15,12 @@ default: &default
   pool: 5
   username: root
   password:
-  socket: /tmp/mysql.sock
+  #socket: /tmp/mysql.sock
 
 development:
   <<: *default
   database: owners_development
+  socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
