--- a/config/database.yml
+++ b/config/database.yml
@@ -51,6 +51,6 @@ test:
 production:
   <<: *default
   database: owners_production
-  username: owners
+  username: root
   password: <%= ENV['OWNERS_DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
